add navbar, articles and styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,325 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet">
     <title>Smashing Magazine</title>
 </head>
 
 <body>
+    <main class="main-container">
+        <nav class="nav-bar">
+            <div class="nav-left">
+                <img src="resources/slogo.svg" alt="image">
+            </div>
+            <div class="nav-mid">
+                <div class="nav-elements">Articles</div>
+                <div class="nav-elements">Guides</div>
+                <div class="nav-elements">Books</div>
+                <div class="nav-elements">Events</div>
+                <div class="nav-elements">Membership</div>
+                <div class="nav-elements">More</div>
+            </div>
 
+            <div class="nav-right search-article">
+                <input type="text" placeholder="search articles">
+            </div>
+
+        </nav>
+        <div class="dont-miss">
+            <h1>Don't Miss These Latest</h1>
+            <h2>Articles</h2>
+        </div>
+        <div class="articles">
+            <article class="left-article">
+                <div class="left-imgTitle imgTitle">
+                    <div class="left-img img">
+
+                    </div>
+                    <div class="left-title atitle">
+                        <h2>Suzanne Scacca <span>wrote</span></h2>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <p>How To Design A Brand Logo (With Ease)</p>
+                    <a href="">
+                        <img src="resources/comment" alt="">
+                        <span>Meow</span>
+                    </a>
+                </div>
+                <div class="tags">
+                    <h5># Logo Design</h5>
+                    <h5># Visual Desihn</h5>
+                </div>
+            </article>
+            <article class="right-article">
+                <div class="right-imgTitle imgTitle">
+                    <div class="right-img img">
+
+                    </div>
+                    <div class="right-title atitle">
+                        <h2>Andrew Clarke <span>wrote</span></h2>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <p>Inspired Design Decisions With Max Huber: Turning Mundane Subjects Into Exciting Visual Communication</p>
+                    <a href="">
+                        <img src="resources/comment" alt="">
+                        <span>Meow</span>
+                    </a>
+                </div>
+                <div class="tags">
+                    <h5># Logo Design</h5>
+                    <h5># Visual Desihn</h5>
+                </div>
+            </article>
+            <article class="left-article1">
+                <div class="left-imgTitle imgTitle">
+                    <div class="left-img img">
+
+                    </div>
+                    <div class="left-title atitle">
+                        <h2>Suzanne Scacca <span>wrote</span></h2>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <p>How To Design A Brand Logo (With Ease)</p>
+                    <a href="">
+                        <img src="resources/comment" alt="">
+                        <span>Meow</span>
+                    </a>
+                </div>
+                <div class="tags">
+                    <h5># Logo Design</h5>
+                    <h5># Visual Desihn</h5>
+                </div>
+            </article>
+            <article class="right-article1">
+                <div class="right-imgTitle imgTitle">
+                    <div class="right-img img">
+
+                    </div>
+                    <div class="right-title atitle">
+                        <h2>Andrew Clarke <span>wrote</span></h2>
+                    </div>
+                </div>
+                <div class="article-content">
+                    <p>Inspired Design Decisions With Max Huber: Turning Mundane Subjects Into Exciting Visual Communication</p>
+                    <a href="">
+                        <img src="resources/comment" alt="">
+                        <span>Meow</span>
+                    </a>
+                </div>
+                <div class="tags">
+                    <h5># Logo Design</h5>
+                    <h5># Visual Desihn</h5>
+                </div>
+            </article>
+        </div>
+        <div class="latest-post">
+            <div class="p1">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+            <div class="p2">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+            <div class="p3">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+
+        </div>
+        <aside class="smashing-members">
+            <div class="smashing-img">
+                <img src="resources/smashing.svg" alt="">
+            </div>
+            <div class="smashing-title">
+                <h1>1,651 smashing members</h1>
+            </div>
+            <div class="smashing-para">
+                <p>
+                    A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month.
+                    <a href="">Join the family.</a>
+                </p>
+            </div>
+            <div class="smashing-btn">
+                <button>Explore features</button>
+
+            </div>
+            <div class="smashing-already">
+                <p>
+                    Already have an account?
+                    <a href="">Sign in!</a>
+                </p>
+            </div>
+        </aside>
+        <div class="latest-post">
+            <div class="p1">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+            <div class="p2">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+            <div class="p3">
+                <div class="date">
+                    <p>May 25,2020</p>
+                </div>
+                <div class="p-title">
+                    <h2>
+                        <a href="">
+                            Can Data Visualization Improve The Mobile Web Experience?
+                        </a>
+                    </h2>
+                </div>
+                <div class="author">
+                    <h2>
+                        by <a href="">Sansa Stark</a>
+                    </h2>
+                </div>
+                <div class="p-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptates amet rem illum sequi illo, ex quis eum error ab totam molestias! Pariatur, qui harum! Ad molestias nulla quisquam unde.</p>
+                </div>
+                <div class="next-btn">
+                    <img src="resources/smashing.svg" alt="arrow">
+                </div>
+            </div>
+
+        </div>
+        <div class="dark-content">
+            <div class="dark-para">
+                <p class="dark-date">25 May 2020</p>
+                <p class="dark-title">How To Convince Others Not To Use Dark Patterns</p>
+                <a href="">by Mian</a>
+                <p class="lorem">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dicta, animi atque asperiores in minus pariatur obcaecati maiores fugit aperiam voluptatibus dolor quod molestias aliquid vero hic nisi. Aliquid, deleniti.
+                </p>
+            </div>
+
+
+        </div>
+        <aside class="smashing-members">
+            <div class="smashing-img">
+                <img src="resources/smashing.svg" alt="">
+            </div>
+            <div class="smashing-title">
+                <h1>1,651 smashing members</h1>
+            </div>
+            <div class="smashing-para">
+                <p>
+                    A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month.
+                    <a href="">Join the family.</a>
+                </p>
+            </div>
+            <div class="smashing-btn">
+                <button>Explore features</button>
+
+            </div>
+            <div class="smashing-already">
+                <p>
+                    Already have an account?
+                    <a href="">Sign in!</a>
+                </p>
+            </div>
+        </aside>
+    </main>
 </body>
 
 </html>
