--- a/index.html
+++ b/index.html
@@ -291,9 +291,12 @@
         <div class="dark-content">
             <div class="dark-para">
                 <p class="dark-date">25 May 2020</p>
-                <p class="dark-title">How To Convince Others Not To Use Dark Patterns</p>
+                <p class="dark-title">
+                    <a href="">
+                        How To Convince Others Not To Use Dark Patterns
+                    </a> </p>
                 <a href="">by Mian</a>
-                <p class="lorem">
+                <p class="dark-lorem">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dicta, animi atque asperiores in minus pariatur obcaecati maiores fugit aperiam voluptatibus dolor quod molestias aliquid vero hic nisi. Aliquid, deleniti.
                 </p>
             </div>
@@ -324,6 +327,151 @@
                 </p>
             </div>
         </aside>
+        <div class="see-all">
+            <h2>SEE ALL ARTICLES</h2>
+        </div>
+        <div class="meet-clicks">
+            <div class="meet-date">
+                <p>25 May, 2020</p>
+            </div>
+            <div class="meet-title">
+                <h2>Meet “Click!”: Encourage Clicks</h2>
+                <p>Without Shady Tricks</p>
+            </div>
+            <div class="meet-content">
+                <p>Our new book on how to <strong>boost business KPIs</strong> , build trust and address doubts effectively — without alienating people along the way. By Paul Boag.</p>
+            </div>
+            <div class="meet-btn">
+                <button>Jump to table of contents</button>
+            </div>
+        </div>
+        <div class="person-of-week">
+            <div class="top-person">
+                <div class="person-pic">
+                </div>
+                <div class="person-title">
+                    <h2>PERSON OF THE WEEK</h2>
+                </div>
+                <div class="person-content">
+                    <p>Michelle Barker (@MicheBarks) is the lead front-end developer at Atomic Smash, a WordPress and WooCommerce design and development studio based in Bristol. She describes herself as a “CSS superfan” and loves to tinker with new CSS features.
+                        To help others learn CSS, Michelle writes about CSS topics on her blog CSS { In Real Life } and shares her knowledge speaking at conferences and meetups. She is also a Mozilla Tech Speaker. Thank you for everything you do for the
+                        community, dear Michelle!
+                    </p>
+                </div>
+            </div>
+            <div class="middle-person">
+                <div class="pr1">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="pr2">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="pr1">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="pr2">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="pr1">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+                <div class="pr2">
+                    <div class="person-pic1">
+                    </div>
+                    <div class="person-title1">
+                        <h2>Harry Roberts <span>wrote</span>
+                        </h2>
+                    </div>
+                    <div class="person-wrote">
+                        <h1>Screen Width And Text Scaling
+                        </h1>
+                    </div>
+                    <div class="person-content1">
+                        <p>may 22, 2020 — Google Fonts is fast, Harry Roberts managed to make it even faster. If you’re using Google Fonts, too, Harry summarized what you can do to improve performance.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="top-person">
+                <div class="person-pic">
+                </div>
+                <div class="person-title">
+                    <h2>PERSON OF THE WEEK</h2>
+                </div>
+                <div class="person-content">
+                    <p>Michelle Barker (@MicheBarks) is the lead front-end developer at Atomic Smash, a WordPress and WooCommerce design and development studio based in Bristol. She describes herself as a “CSS superfan” and loves to tinker with new CSS features.
+                        To help others learn CSS, Michelle writes about CSS topics on her blog CSS { In Real Life } and shares her knowledge speaking at conferences and meetups. She is also a Mozilla Tech Speaker. Thank you for everything you do for the
+                        community, dear Michelle!
+                    </p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
