--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
         </nav>
         <div class="dont-miss">
-            <h1>Don't Miss These Latest</h1>
-            <h2>Articles</h2>
+            <h1>Don't Miss These Latest Articles</h1>
         </div>
         <div class="articles">
             <article class="left-article">
@@ -125,14 +124,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttw">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authb">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -148,14 +147,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttw">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authb">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -171,14 +170,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttb">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authw">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -221,14 +220,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttw">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authb">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -244,14 +243,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttw">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authb">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -267,14 +266,14 @@
                 <div class="date">
                     <p>May 25,2020</p>
                 </div>
-                <div class="p-title">
+                <div class="p-title pttb">
                     <h2>
                         <a href="">
                             Can Data Visualization Improve The Mobile Web Experience?
                         </a>
                     </h2>
                 </div>
-                <div class="author">
+                <div class="author authw">
                     <h2>
                         by <a href="">Sansa Stark</a>
                     </h2>
@@ -300,8 +299,6 @@
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur dicta, animi atque asperiores in minus pariatur obcaecati maiores fugit aperiam voluptatibus dolor quod molestias aliquid vero hic nisi. Aliquid, deleniti.
                 </p>
             </div>
-
-
         </div>
         <aside class="smashing-members">
             <div class="smashing-img">
@@ -458,7 +455,7 @@
                 </div>
 
             </div>
-            <div class="top-person">
+            <div class="top-person tp1">
                 <div class="person-pic">
                 </div>
                 <div class="person-title">
@@ -470,8 +467,160 @@
                         community, dear Michelle!
                     </p>
                 </div>
+                <div class="jump-to">
+                    <button>
+                        Jump to table of contents
+                    </button>
+                </div>
             </div>
         </div>
+        <div class="bottom-post latest-post">
+            <div class="p1">
+                <div class="date">
+                    <p>Guide</p>
+                </div>
+                <div class="p-title pttw">
+                    <h2>
+                        <a href="">
+                            New Front-End Challenges To Master
+                        </a>
+                    </h2>
+                </div>
+                <div class="p-content p-list">
+                    <ul>
+                        <li>CSS Grid Layout</li>
+                        <li>Pattern Library</li>
+                        <li>Progressive Web Apps</li>
+                        <li>Switching to HTTPS</li>
+                        <li>HTTP/2 Guidelines</li>
+                        <li>React & Vue.js</li>
+                        <li>Redux For Designers</li>
+                        <li>Vue Components</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="p2">
+                <div class="date">
+                    <p>Guide</p>
+                </div>
+                <div class="p-title pttw">
+                    <h2>
+                        <a href="">
+                            New Front-End Challenges To Master
+                        </a>
+                    </h2>
+                </div>
+
+                <div class="p-content p-list">
+                    <ul>
+                        <li>CSS Grid Layout</li>
+                        <li>Pattern Library</li>
+                        <li>Progressive Web Apps</li>
+                        <li>Switching to HTTPS</li>
+                        <li>HTTP/2 Guidelines</li>
+                        <li>React & Vue.js</li>
+                        <li>Redux For Designers</li>
+                        <li>Vue Components</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="p3">
+                <div class="date">
+                    <p>Guide</p>
+                </div>
+                <div class="p-title pttb">
+                    <h2>
+                        <a href="">
+                            New Front-End Challenges To Master
+
+                        </a>
+                    </h2>
+                </div>
+                <div class="p-content p-list">
+                    <ul>
+                        <li>CSS Grid Layout</li>
+                        <li>Pattern Library</li>
+                        <li>Progressive Web Apps</li>
+                        <li>Switching to HTTPS</li>
+                        <li>HTTP/2 Guidelines</li>
+                        <li>React & Vue.js</li>
+                        <li>Redux For Designers</li>
+                        <li>Vue Components</li>
+                    </ul>
+                </div>
+            </div>
+
+        </div>
+        <div class="dark-content">
+            <div class="dark-para">
+                <p class="dark-date">Guides</p>
+                <p class="dark-title">
+                    <a href="">
+                        Design Patterns & Checklists
+                    </a> </p>
+                <div class="p-content p-list">
+                    <ul>
+                        <li>Responsive Art-Direction
+                        </li>
+                        <li> Perfect Configurator
+                        </li>
+                        <li> Perfect Web Form
+                        </li>
+                        <li> Perfect Accordion
+                        </li>
+                        <li> Perfect Date Picker
+                        </li>
+                        <li> Perfect Slider
+                        </li>
+                        <li> Perfect Comparison Table
+                        </li>
+                        <li>Perfect Infinite Scroll</li>
+                        <li> Perfect Carousel
+                        </li>
+                        <li>Privacy UX</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <aside class="smashing-members smashing-news">
+            <div class="smashing-title">
+                <h1>smashing Newsletter</h1>
+            </div>
+            <div class="smashing-para">
+                <p class="news">
+                    A friendly community that keeps this website alive. With books, webinars, discounts and networking — for just 1 coffee a month.
+                    <a href="">Join the family.</a>
+                </p>
+            </div>
+            <div class="smashing-img">
+                <img src="resources/smashing.svg" alt="">
+            </div>
+            <div class="smashing-btn news-btn">
+                <button>Smashing Email</button>
+
+            </div>
+            <div class="smashing-already">
+                <p>
+                    Front-end, design and UX. Sent 2× a month.
+                </p>
+            </div>
+        </aside>
+        <footer class="footer">
+            <div class="ftitle">
+                <h2>BROWSE ALL SMASHING MAGAZINE TOPICS</h2>
+            </div>
+            <div class="foot-content">
+                <p>
+                    Accessibility Android Animation Apps CSS Design Design Patterns Design Systems E-Commerce Freebies Graphics HTML Illustrator Inspiration iOS Java Script Mobile Pattern Libraries Performance Photoshop Plugins React Responsive Web Design Service Workers
+                    Sketch Typography UI Usability User Experience Wallpapers Web Design WordPress Workflow
+                </p>
+            </div>
+            <div class="foot-bottom">
+                <p>
+                    With a commitment to quality content for the design community. Founded by Vitaly Friedman and Sven Lennartz. 2006–2020. Smashing is proudly running on Netlify. Fonts by Latinotype.
+                </p>
+            </div>
+        </footer>
     </main>
 </body>
 
