--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
                 <div class="article-content">
                     <p>How To Design A Brand Logo (With Ease)</p>
                     <a href="">
-                        <img src="resources/comment" alt="">
-                        <span>Meow</span>
+                        <img src="resources/comment" alt=""> Meow
                     </a>
                 </div>
                 <div class="tags">
