fix html and css errors

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <img src="resources/smashing.svg" alt="">
             </div>
             <div class="smashing-title">
-                <h1>1,651 smashing members</h1>
+                <h2>1,651 smashing members</h2>
             </div>
             <div class="smashing-para">
                 <p>
@@ -304,7 +304,7 @@
                 <img src="resources/smashing.svg" alt="">
             </div>
             <div class="smashing-title">
-                <h1>1,651 smashing members</h1>
+                <h2>1,651 smashing members</h2>
             </div>
             <div class="smashing-para">
                 <p>
@@ -583,7 +583,7 @@
         </div>
         <aside class="smashing-members smashing-news">
             <div class="smashing-title">
-                <h1>smashing Newsletter</h1>
+                <h2>smashing Newsletter</h2>
             </div>
             <div class="smashing-para">
                 <p class="news">
@@ -610,8 +610,39 @@
             </div>
             <div class="foot-content">
                 <p>
-                    Accessibility Android Animation Apps CSS Design Design Patterns Design Systems E-Commerce Freebies Graphics HTML Illustrator Inspiration iOS Java Script Mobile Pattern Libraries Performance Photoshop Plugins React Responsive Web Design Service Workers
-                    Sketch Typography UI Usability User Experience Wallpapers Web Design WordPress Workflow
+                    <a href="">Accessibility</a>
+                    <a href="">Android</a>
+                    <a href="">Animation</a>
+                    <a href="">Apps</a>
+                    <a href="">CSS Design</a>
+                    <a href="">Design Patterns</a>
+                    <a href="">Design Systems</a>
+                    <a href="">E-Commerce</a>
+                    <a href="">Freebies</a>
+                    <a href="">Graphics</a>
+                    <a href="">HTML</a>
+                    <a href="">Illustrator Inspiration</a>
+                    <a href="">iOS</a>
+                    <a href="">Java</a>
+                    <a href="">Script</a>
+                    <a href="">Mobile Pattern</a>
+                    <a href="">Mobile Pattern</a>
+                    <a href="">Libraries</a>
+                    <a href="">Performance</a>
+                    <a href="">Photoshop</a>
+                    <a href="">Plugins</a>
+                    <a href="">React</a>
+                    <a href="">Responsive Web</a>
+                    <a href="">Workers</a>
+                    <a href="">Sketch</a>
+                    <a href="">Typography</a>
+                    <a href="">Design</a>
+                    <a href="">Service</a>
+                    <a href="">UI Usability</a>
+                    <a href="">User Experience</a>
+                    <a href="">Wallpapers</a>
+                    <a href="">Web Design</a>
+                    <a href="">WordPress Workflow</a>
                 </p>
             </div>
             <div class="foot-bottom">
